# 1zari-be

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dump.rdb  pyproject.toml  test.sh
.github/workflows/: checks.yaml
config/settings/: base.py  dev.py
config/urls/: dev_urls.py
job_position/: apps.py
job_posting/: admin.py  apps.py  models.py  schemas.py
job_posting/migrations/: 0001_initial.py  0002_jobposting_address_jobposting_city_and_more.py  0003_jobposting_town_alter_jobposting_address_and_more.py
job_posting/tests/: test_models.py
job_posting/urls/: urls.py
job_posting/views/: views.py
resume/: admin.py  models.py  schemas.py  serializer.py
resume/migrations/: 0001_initial.py  0002_careerinfo.py  0003_delete_careerinfo.py  0004_careerinfo.py  0005_alter_careerinfo_employment_period_end.py  0006_alter_careerinfo_resume.py  0007_remove_resume_education_resume_education_level_and_more.py  0008_rename_issuing_organizatio_certification_issuing_organization.py  0009_submission.py  0010_rename_user_id_resume_user_remove_submission_resume_and_more.py  0011_alter_submission_memo.py
resume/tests/: test_models.py  test_resume.py  test_submissions.py
resume/urls/: resume_urls.py  submission_urls.py  url.py
resume/views/: resume_views.py  submission_views.py  views.py
search/: import_district.py  import_logical_data.py  models.py  redis.py  redis_script.py  schemas.py  views.py
search/data/: city_district.dbf  city_district.shx  new_city_district.dbf  new_city_district.shx  new_new_city_district.dbf
search/logical_data/: new_logical_data.dbf
search/migrations/: 0001_initial.py  0002_alter_district_geometry.py  0003_district_emd_name_district_emd_no_and_more.py
search/tests/: test_tree.py
search/urls/: search_urls.py
search/views/: search_views.py  tree_views.py
user/: admin.py  models.py  redis.py  schemas.py
user/migrations/: 0001_initial.py  0002_remove_companyinfo_is_active_and_more.py  0002_rename_id_commonuser_common_user_id_and_more.py  0003_commonuser_groups_commonuser_is_superuser_and_more.py  0004_remove_userinfo_wish_work_place_and_more.py  0005_remove_companyinfo_is_staff_commonuser_is_staff.py  0006_alter_companyinfo_certificate_image_and_more.py
user/tests/: test_models.py  test_oauth.py  test_token.py  test_verify.py  test_views.py
user/urls/: url.py  urls.py
user/views/: views.py  views_oauth.py  views_token.py  views_verify.py
utils/: common.py  models.py  ncp_storage.py  schemas.py
