[project]
name = "config"
version = "0.1.0"
description = ""
authors = [
    {name = "rodzlen",email = "qkqhrkxdkdy@naver.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "gdal (==3.8.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py"]